@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.26
+Release: 0.27
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -476,6 +476,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Wed Jul 16 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.27
+- repair find-debuginfo.sh to avoid recursing in /usr/lib/debug.
+
 * Thu Jul 10 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.26
 - apply debugedit patch necessary to produce kernel -debuginfo files.
 - zap zlib files so that apidocs gets included.
